// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ConfirmationSettingForm render snapshot when enable is equal false 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-form-item has-label-tip css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-20 ant-form-item-label"
            >
              <label
                class=""
                for="notification_confirmation"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    上线前是否发送通知进行确认
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    若开启，到达上线时间点，平台将发送一则上线确认信息，确认后执行上线操作；若不开启，到达上线时间将自动执行上线操作
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-2 ant-col-push-1 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch basic-switch-wrapper css-g6dhbn"
                    id="notification_confirmation"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test ConfirmationSettingForm render snapshot when enable is equal true and close the config 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-form-item has-label-tip css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-20 ant-form-item-label"
            >
              <label
                class=""
                for="notification_confirmation"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    上线前是否发送通知进行确认
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    若开启，到达上线时间点，平台将发送一则上线确认信息，确认后执行上线操作；若不开启，到达上线时间将自动执行上线操作
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-2 ant-col-push-1 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch basic-switch-wrapper css-g6dhbn"
                    id="notification_confirmation"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item has-label-tip has-required-style css-15ihijf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-16 ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="confirmation_method"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    确认方式
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    目前仅支持企业微信、飞书，如果您尚未配置相应流程的对接能力，请先到
                    <a
                      href="/system?active_tab=process_connection"
                      target="_blank"
                    >
                      系统设置-流程对接
                    </a>
                    处开启
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-6 ant-col-push-2 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-space ant-space-vertical full-width-element actiontech-toggle-tokens css-inle2o"
                    id="confirmation_method"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="企业微信"
                          class="toggle-token-item-label"
                          title="企业微信"
                        >
                          企业微信
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="飞书"
                          class="toggle-token-item-label"
                          title="飞书"
                        >
                          飞 书
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test ConfirmationSettingForm render snapshot when enable is equal true and open the config 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-form-item has-label-tip css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-20 ant-form-item-label"
            >
              <label
                class=""
                for="notification_confirmation"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    上线前是否发送通知进行确认
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    若开启，到达上线时间点，平台将发送一则上线确认信息，确认后执行上线操作；若不开启，到达上线时间将自动执行上线操作
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-2 ant-col-push-1 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch basic-switch-wrapper css-g6dhbn"
                    id="notification_confirmation"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item has-label-tip has-required-style css-15ihijf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-16 ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="confirmation_method"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    确认方式
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    目前仅支持企业微信、飞书，如果您尚未配置相应流程的对接能力，请先到
                    <a
                      href="/system?active_tab=process_connection"
                      target="_blank"
                    >
                      系统设置-流程对接
                    </a>
                    处开启
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-6 ant-col-push-2 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-space ant-space-vertical full-width-element actiontech-toggle-tokens css-inle2o"
                    id="confirmation_method"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="企业微信"
                          class="toggle-token-item-label"
                          title="企业微信"
                        >
                          企业微信
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-primary toggle-token-item toggle-token-item-checked toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="飞书"
                          class="toggle-token-item-label"
                          title="飞书"
                        >
                          飞 书
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test ConfirmationSettingForm render snapshot when enable is equal true and open the feishu config 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-form-item has-label-tip css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-20 ant-form-item-label"
            >
              <label
                class=""
                for="notification_confirmation"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    上线前是否发送通知进行确认
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    若开启，到达上线时间点，平台将发送一则上线确认信息，确认后执行上线操作；若不开启，到达上线时间将自动执行上线操作
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-2 ant-col-push-1 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch basic-switch-wrapper css-g6dhbn"
                    id="notification_confirmation"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item has-label-tip has-required-style css-15ihijf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-16 ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="confirmation_method"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    确认方式
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    目前仅支持企业微信、飞书，如果您尚未配置相应流程的对接能力，请先到
                    <a
                      href="/system?active_tab=process_connection"
                      target="_blank"
                    >
                      系统设置-流程对接
                    </a>
                    处开启
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-6 ant-col-push-2 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-space ant-space-vertical full-width-element actiontech-toggle-tokens css-inle2o"
                    id="confirmation_method"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="企业微信"
                          class="toggle-token-item-label"
                          title="企业微信"
                        >
                          企业微信
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="飞书"
                          class="toggle-token-item-label"
                          title="飞书"
                        >
                          飞 书
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test ConfirmationSettingForm render snapshot when enable is equal true and open the wechat config 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-form-item has-label-tip css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-20 ant-form-item-label"
            >
              <label
                class=""
                for="notification_confirmation"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    上线前是否发送通知进行确认
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    若开启，到达上线时间点，平台将发送一则上线确认信息，确认后执行上线操作；若不开启，到达上线时间将自动执行上线操作
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-2 ant-col-push-1 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch basic-switch-wrapper css-g6dhbn"
                    id="notification_confirmation"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item has-label-tip has-required-style css-15ihijf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-16 ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="confirmation_method"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    确认方式
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    目前仅支持企业微信、飞书，如果您尚未配置相应流程的对接能力，请先到
                    <a
                      href="/system?active_tab=process_connection"
                      target="_blank"
                    >
                      系统设置-流程对接
                    </a>
                    处开启
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-6 ant-col-push-2 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-space ant-space-vertical full-width-element actiontech-toggle-tokens css-inle2o"
                    id="confirmation_method"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="企业微信"
                          class="toggle-token-item-label"
                          title="企业微信"
                        >
                          企业微信
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="飞书"
                          class="toggle-token-item-label"
                          title="飞书"
                        >
                          飞 书
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test ConfirmationSettingForm render snapshot when enable is equal true and request throw catch 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-form-item has-label-tip css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-20 ant-form-item-label"
            >
              <label
                class=""
                for="notification_confirmation"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    上线前是否发送通知进行确认
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    若开启，到达上线时间点，平台将发送一则上线确认信息，确认后执行上线操作；若不开启，到达上线时间将自动执行上线操作
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-2 ant-col-push-1 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch basic-switch-wrapper css-g6dhbn"
                    id="notification_confirmation"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item has-label-tip has-required-style css-15ihijf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-16 ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="confirmation_method"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    确认方式
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    目前仅支持企业微信、飞书，如果您尚未配置相应流程的对接能力，请先到
                    <a
                      href="/system?active_tab=process_connection"
                      target="_blank"
                    >
                      系统设置-流程对接
                    </a>
                    处开启
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-6 ant-col-push-2 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-space ant-space-vertical full-width-element actiontech-toggle-tokens css-inle2o"
                    id="confirmation_method"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="企业微信"
                          class="toggle-token-item-label"
                          title="企业微信"
                        >
                          企业微信
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="飞书"
                          class="toggle-token-item-label"
                          title="飞书"
                        >
                          飞 书
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test ConfirmationSettingForm should match snapshot when current language is en 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-form-item has-label-tip css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-20 ant-form-item-label"
            >
              <label
                class=""
                for="notification_confirmation"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    上线前是否发送通知进行确认
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    若开启，到达上线时间点，平台将发送一则上线确认信息，确认后执行上线操作；若不开启，到达上线时间将自动执行上线操作
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-2 ant-col-push-1 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch basic-switch-wrapper css-g6dhbn"
                    id="notification_confirmation"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item has-label-tip has-required-style css-15ihijf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-16 ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="confirmation_method"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    确认方式
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    目前仅支持企业微信、飞书，如果您尚未配置相应流程的对接能力，请先到
                    <a
                      href="/system?active_tab=process_connection"
                      target="_blank"
                    >
                      系统设置-流程对接
                    </a>
                    处开启
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-8 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-space ant-space-vertical full-width-element actiontech-toggle-tokens css-inle2o"
                    id="confirmation_method"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="企业微信"
                          class="toggle-token-item-label"
                          title="企业微信"
                        >
                          企业微信
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-primary toggle-token-item toggle-token-item-checked toggle-token-item-button-style basic-button-wrapper css-10ae2zl"
                        type="button"
                      >
                        <span
                          aria-label="飞书"
                          class="toggle-token-item-label"
                          title="飞书"
                        >
                          飞 书
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
